# TODO_backend

./: .env.example  .gitignore  README.md  db.sqlite3  project_spec.md  pyproject.toml  requirements.txt  schema.yaml
auth_app/: admin.py  models.py  serializers.py  tests.py  views.py
auth_app/migrations/: 0001_initial.py
authentication/: models.py  serializers.py  tests.py  views.py
authentication/management/commands/: create_admin_user.py
authentication/migrations/: 0001_initial.py
config/: settings.py  urls.py
todo/: models.py  serializers.py  urls.py  views.py
todo/migrations/: 0001_initial.py  0002_task_user.py
